Add sidebar content and link css reset

--- a/index.html
+++ b/index.html
@@ -5,12 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Page</title>
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="page-container">
         <div class="header"></div>
-        <div class="sidebar"></div>
+        <div class="sidebar">
+            <div class="logo">
+                Dashboard
+            </div>
+            <div class="menu-items">
+                <ul>
+                    <li>Home</li>
+                    <li>Profile</li>
+                    <li>Messages</li>
+                    <li>History</li>
+                    <li>Tasks</li>
+                    <li>Communities</li>
+                </ul>
+            </div>
+            <div class="settings-items">
+                <ul>
+                    <li>Settings</li>
+                    <li>Support</li>
+                    <li>Privacy</li>
+                </ul>
+            </div>
+        </div>
         <div class="main-content">Main Area</div>
     </div>
 </body>
