Add icons and styles to sidebar

--- a/index.html
+++ b/index.html
@@ -13,23 +13,23 @@
         <div class="header"></div>
         <div class="sidebar">
             <div class="logo">
-                Dashboard
+                <h2><img src="./assets/alpha-a-box.png" alt="Logo">Dashboard</h2>
             </div>
             <div class="menu-items">
                 <ul>
-                    <li>Home</li>
-                    <li>Profile</li>
-                    <li>Messages</li>
-                    <li>History</li>
-                    <li>Tasks</li>
-                    <li>Communities</li>
+                    <li><img src="./assets/home.png" alt="Home Icon">Home</li>
+                    <li><img src="./assets/card-account-details-outline.png" alt="Profile Icon">Profile</li>
+                    <li><img src="./assets/message-settings.png" alt="Messages Icon">Messages</li>
+                    <li><img src="./assets/clipboard-text-clock.png" alt="History Icon">History</li>
+                    <li><img src="./assets/checkbox-marked-circle-plus-outline.png" alt="Tasks Icon">Tasks</li>
+                    <li><img src="./assets/account-group.png" alt="Community Icon">Communities</li>
                 </ul>
             </div>
             <div class="settings-items">
                 <ul>
-                    <li>Settings</li>
-                    <li>Support</li>
-                    <li>Privacy</li>
+                    <li><img src="./assets/account-cog.png" alt="Settings Icon">Settings</li>
+                    <li><img src="./assets/account-question.png" alt="Support Icon">Support</li>
+                    <li><img src="./assets/account-lock.png" alt="Privacy Icon">Privacy</li>
                 </ul>
             </div>
         </div>
