Complete html and styles for upperhalf of header

--- a/index.html
+++ b/index.html
@@ -10,7 +10,27 @@
 </head>
 <body>
     <div class="page-container">
-        <div class="header"></div>
+        <div class="header">
+            <div class="search-header">
+                <div class="search-bar">
+                    <button><img src="./assets/magnify.png" alt="Search Logo"></button>
+                    <input type="search" name="Search" id="Search">
+                </div>
+                <div class="user-logos">
+                    <img id="alert-icon" src="./assets/bell-badge (1).png" alt="Alert">
+                    <img src="./assets/user.png" alt="User Profile Picture">
+                    <h3>Ryan Trekell</h3>
+                </div>
+
+            </div>
+
+            <div class="user-menu">
+
+            </div>
+        </div>
+
+
+
         <div class="sidebar">
             <div class="logo">
                 <h2><img src="./assets/alpha-a-box.png" alt="Logo">Dashboard</h2>
