Complete second header row

--- a/index.html
+++ b/index.html
@@ -25,7 +25,16 @@
             </div>
 
             <div class="user-menu">
-
+                <div class="user-greeting">
+                    <img id="large-profile-image" src="./assets/user.png" alt="User photo">
+                    <div class="hi-there">Hi there,</div>
+                    <div class="user-data">Ryan Trekell (@codemonkey)</div>
+                </div>
+                <div class="header-buttons">
+                    <button>New</button>
+                    <button>Upload</button>
+                    <button>Share</button>
+                </div>
             </div>
         </div>
 
@@ -53,7 +62,7 @@
                 </ul>
             </div>
         </div>
-        <div class="main-content">Main Area</div>
+        <div class="main-content"></div>
     </div>
 </body>
 </html>
