Add task cards and main content containers

--- a/index.html
+++ b/index.html
@@ -62,7 +62,28 @@
                 </ul>
             </div>
         </div>
-        <div class="main-content"></div>
+
+        <div class="main-content">
+            <div class="task-card-container">
+                <div class="task-card">One</div>
+                <div class="task-card">Two</div>
+                <div class="task-card">Three</div>
+                <div class="task-card">Four</div>
+                <div class="task-card">Five</div>
+                <div class="task-card">Six</div>
+                <div class="task-card">Seven</div>
+                <div class="task-card">Eight</div>
+            </div>
+            <div class="social-container">
+                <div class="announcements">
+                    Info
+                </div>
+                <div class="trending">
+                    Other accounts
+                </div>
+            </div>
+        </div>
+
     </div>
 </body>
 </html>
