Debug grid auto flow and add accents

--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
         </div>
 
         <div class="main-content">
+            <h3 id="projects-title">Your Projects</h3>
+            <h3>Announcements</h3>
             <div class="task-card-container">
                 <div class="task-card">One</div>
                 <div class="task-card">Two</div>
