Fix padding throughout

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
                 <div class="announcements">
                     Info
                 </div>
+                <h3>Trending</h3>
                 <div class="trending">
                     Other accounts
                 </div>
