Add content to task cards

--- a/index.html
+++ b/index.html
@@ -67,14 +67,78 @@
             <h3 id="projects-title">Your Projects</h3>
             <h3>Announcements</h3>
             <div class="task-card-container">
-                <div class="task-card">One</div>
-                <div class="task-card">Two</div>
-                <div class="task-card">Three</div>
-                <div class="task-card">Four</div>
-                <div class="task-card">Five</div>
-                <div class="task-card">Six</div>
-                <div class="task-card">Seven</div>
-                <div class="task-card">Eight</div>
+                <div class="task-card">
+                    <h4>Not a cool project</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labor. Cursus metus aliquam eleifend mi.</p>
+                    <div class="card-footer">
+                        <img src="./assets/star-plus-outline.png" alt="Favorite">
+                        <img src="./assets/eye-off.png" alt="Hide">
+                        <img src="./assets/source-fork.png" alt="Fork">
+                    </div>
+                </div>
+                <div class="task-card">
+                    <h4>Not a cool project</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labor. Cursus metus aliquam eleifend mi.</p>
+                    <div class="card-footer">
+                        <img src="./assets/star-plus-outline.png" alt="Favorite">
+                        <img src="./assets/eye-off.png" alt="Hide">
+                        <img src="./assets/source-fork.png" alt="Fork">
+                    </div>
+                </div>
+                <div class="task-card">
+                    <h4>Not a cool project</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labor. Cursus metus aliquam eleifend mi.</p>
+                    <div class="card-footer">
+                        <img src="./assets/star-plus-outline.png" alt="Favorite">
+                        <img src="./assets/eye-off.png" alt="Hide">
+                        <img src="./assets/source-fork.png" alt="Fork">
+                    </div>
+                </div>
+                <div class="task-card">
+                    <h4>Not a cool project</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labor. Cursus metus aliquam eleifend mi.</p>
+                    <div class="card-footer">
+                        <img src="./assets/star-plus-outline.png" alt="Favorite">
+                        <img src="./assets/eye-off.png" alt="Hide">
+                        <img src="./assets/source-fork.png" alt="Fork">
+                    </div>
+                </div>
+                <div class="task-card">
+                    <h4>Not a cool project</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labor. Cursus metus aliquam eleifend mi.</p>
+                    <div class="card-footer">
+                        <img src="./assets/star-plus-outline.png" alt="Favorite">
+                        <img src="./assets/eye-off.png" alt="Hide">
+                        <img src="./assets/source-fork.png" alt="Fork">
+                    </div>
+                </div>
+                <div class="task-card">
+                    <h4>Not a cool project</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labor. Cursus metus aliquam eleifend mi.</p>
+                    <div class="card-footer">
+                        <img src="./assets/star-plus-outline.png" alt="Favorite">
+                        <img src="./assets/eye-off.png" alt="Hide">
+                        <img src="./assets/source-fork.png" alt="Fork">
+                    </div>
+                </div>
+                <div class="task-card">
+                    <h4>Not a cool project</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labor. Cursus metus aliquam eleifend mi.</p>
+                    <div class="card-footer">
+                        <img src="./assets/star-plus-outline.png" alt="Favorite">
+                        <img src="./assets/eye-off.png" alt="Hide">
+                        <img src="./assets/source-fork.png" alt="Fork">
+                    </div>
+                </div>
+                <div class="task-card">
+                    <h4>Not a cool project</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labor. Cursus metus aliquam eleifend mi.</p>
+                    <div class="card-footer">
+                        <img src="./assets/star-plus-outline.png" alt="Favorite">
+                        <img src="./assets/eye-off.png" alt="Hide">
+                        <img src="./assets/source-fork.png" alt="Fork">
+                    </div>
+                </div>
             </div>
             <div class="social-container">
                 <div class="announcements">
