Finish announcements and trending cards

--- a/index.html
+++ b/index.html
@@ -142,15 +142,40 @@
             </div>
             <div class="social-container">
                 <div class="announcements">
-                    Info
+                    <div class="announcement-detail">
+                        <h5>Site Maintenance</h5>
+                        <p>Neque sodales ut etiam sit amet nisl purus in mollis. Pretium nibh ipsum consequat nisl vel pretium lectus. </p>
+                    </div>
+                    <div class="announcement-detail">
+                        <h5>Community Event</h5>
+                        <p>Neque sodales ut etiam sit amet nisl purus in mollis. Pretium nibh ipsum consequat nisl vel pretium lectus. </p>
+                    </div>
+                    <div class="announcement-detail">
+                        <h5>Privacy Updates</h5>
+                        <p>Neque sodales ut etiam sit amet nisl purus in mollis. Pretium nibh ipsum consequat nisl vel pretium lectus. </p>
+                    </div>
                 </div>
                 <h3>Trending</h3>
                 <div class="trending">
-                    Other accounts
+                    <div class="trending-profile">
+                        <img src="./assets/user.png" alt="Logo">
+                        <p>@NewTrainingsDept</p>
+                    </div>
+                    <div class="trending-profile">
+                        <img src="./assets/user.png" alt="Logo">
+                        <p>@JoelSux</p>
+                    </div>
+                    <div class="trending-profile">
+                        <img src="./assets/user.png" alt="Logo">
+                        <p>@CSSisHell</p>
+                    </div>
+                    <div class="trending-profile">
+                        <img src="./assets/user.png" alt="Logo">
+                        <p>@SpamUser</p>
+                    </div>
                 </div>
             </div>
         </div>
-
     </div>
 </body>
 </html>
